--- a/Experiment/loggintest.ipynb
+++ b/Experiment/loggintest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "491ca885-6db1-4c2a-958f-65ea7a0256f8",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "b2ac2526-7b50-4f68-80ef-a99029b61093",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "cf92d7b5-5985-4938-b62d-6c772601951a",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "44722b25-e5fb-44f6-aa51-f92fe9323f8a",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "d28c5786-2c89-4d62-92b6-9b2e0aaac1a9",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "588f5115-7ad2-4cae-9285-1159ff4c0021",
    "metadata": {},
    "outputs": [
@@ -101,12 +101,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>2316</th>\n",
+       "      <td>63fbf54550fce419f8da4011</td>\n",
+       "      <td>2023-02-27 00:11:49.774</td>\n",
+       "      <td>Main_Loop_Startup</td>\n",
+       "      <td>Login Sequence Starting</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2315</th>\n",
+       "      <td>63fbf29873d6c1c1d16530fb</td>\n",
+       "      <td>2023-02-27 00:00:24.555</td>\n",
+       "      <td>Extraction</td>\n",
+       "      <td></td>\n",
+       "      <td>1428.566667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2314</th>\n",
        "      <td>63fbf0a173d6c1c1d16530fa</td>\n",
        "      <td>2023-02-26 23:52:01.455</td>\n",
        "      <td>Extraction</td>\n",
        "      <td></td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>1431.600000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2313</th>\n",
@@ -123,22 +139,6 @@
        "      <td>Navigating</td>\n",
        "      <td>Site Three Alpha</td>\n",
        "      <td>1439.850000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2311</th>\n",
-       "      <td>63fbeefa73d6c1c1d16530f7</td>\n",
-       "      <td>2023-02-26 23:44:58.645</td>\n",
-       "      <td>Navigating</td>\n",
-       "      <td>Site One Alpha</td>\n",
-       "      <td>1438.850000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2310</th>\n",
-       "      <td>63fbeeb673d6c1c1d16530f6</td>\n",
-       "      <td>2023-02-26 23:43:50.055</td>\n",
-       "      <td>Navigating</td>\n",
-       "      <td>Site Two Alpha</td>\n",
-       "      <td>1438.850000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -190,40 +190,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2315 rows × 5 columns</p>\n",
+       "<p>2317 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           _id                datetime      action  \\\n",
-       "2314  63fbf0a173d6c1c1d16530fa 2023-02-26 23:52:01.455  Extraction   \n",
-       "2313  63fbef4873d6c1c1d16530f9 2023-02-26 23:46:16.241  Extraction   \n",
-       "2312  63fbef3f73d6c1c1d16530f8 2023-02-26 23:46:07.245  Navigating   \n",
-       "2311  63fbeefa73d6c1c1d16530f7 2023-02-26 23:44:58.645  Navigating   \n",
-       "2310  63fbeeb673d6c1c1d16530f6 2023-02-26 23:43:50.055  Navigating   \n",
-       "...                        ...                     ...         ...   \n",
-       "4     63f42151d2bfb6cfc297a6f4 2023-02-21 01:41:37.885  Extraction   \n",
-       "3     63f41f4dd2bfb6cfc297a6f3 2023-02-21 01:33:01.297  Extraction   \n",
-       "2     63f41dfcd2bfb6cfc297a6f2 2023-02-21 01:27:24.965  Extraction   \n",
-       "1     63f41cacd2bfb6cfc297a6f1 2023-02-21 01:21:48.775  Extraction   \n",
-       "0     63f41ca5d2bfb6cfc297a6f0 2023-02-21 01:21:41.055  Navigating   \n",
+       "                           _id                datetime             action  \\\n",
+       "2316  63fbf54550fce419f8da4011 2023-02-27 00:11:49.774  Main_Loop_Startup   \n",
+       "2315  63fbf29873d6c1c1d16530fb 2023-02-27 00:00:24.555         Extraction   \n",
+       "2314  63fbf0a173d6c1c1d16530fa 2023-02-26 23:52:01.455         Extraction   \n",
+       "2313  63fbef4873d6c1c1d16530f9 2023-02-26 23:46:16.241         Extraction   \n",
+       "2312  63fbef3f73d6c1c1d16530f8 2023-02-26 23:46:07.245         Navigating   \n",
+       "...                        ...                     ...                ...   \n",
+       "4     63f42151d2bfb6cfc297a6f4 2023-02-21 01:41:37.885         Extraction   \n",
+       "3     63f41f4dd2bfb6cfc297a6f3 2023-02-21 01:33:01.297         Extraction   \n",
+       "2     63f41dfcd2bfb6cfc297a6f2 2023-02-21 01:27:24.965         Extraction   \n",
+       "1     63f41cacd2bfb6cfc297a6f1 2023-02-21 01:21:48.775         Extraction   \n",
+       "0     63f41ca5d2bfb6cfc297a6f0 2023-02-21 01:21:41.055         Navigating   \n",
        "\n",
-       "               context    timedelta  \n",
-       "2314                       0.000000  \n",
-       "2313                    1434.233333  \n",
-       "2312  Site Three Alpha  1439.850000  \n",
-       "2311    Site One Alpha  1438.850000  \n",
-       "2310    Site Two Alpha  1438.850000  \n",
-       "...                ...          ...  \n",
-       "4                       1431.383333  \n",
-       "3                       1431.383333  \n",
-       "2                       1434.383333  \n",
-       "1                       1434.383333  \n",
-       "0       Site Two Alpha  1439.866667  \n",
+       "                      context    timedelta  \n",
+       "2316  Login Sequence Starting     0.000000  \n",
+       "2315                           1428.566667  \n",
+       "2314                           1431.600000  \n",
+       "2313                           1434.233333  \n",
+       "2312         Site Three Alpha  1439.850000  \n",
+       "...                       ...          ...  \n",
+       "4                              1431.383333  \n",
+       "3                              1431.383333  \n",
+       "2                              1434.383333  \n",
+       "1                              1434.383333  \n",
+       "0              Site Two Alpha  1439.866667  \n",
        "\n",
-       "[2315 rows x 5 columns]"
+       "[2317 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
