--- a/Experiment/Overlay.ipynb
+++ b/Experiment/Overlay.ipynb
@@ -124,6 +124,8 @@
     "draw_target(*config['scanner_button_target'], color='red')\n",
     "draw_target(*config['mining_hold_target'], color='limegreen')\n",
     "\n",
+    "drawbox(*config['miners'], color='lightblue')\n",
+    "\n",
     "drawbox(*config['cargo_box'])\n",
     "drawbox(*config['locations_box'])\n",
     "canvas.pack(fill=BOTH, expand=1)"
@@ -172,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
