--- a/TrainingPipelines/UniversalTrainer.ipynb
+++ b/TrainingPipelines/UniversalTrainer.ipynb
@@ -75,10 +75,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3bce9d14-7d37-4e8b-b621-b8923c021c9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "Found 31 files belonging to 4 classes.\n",
+      "Using 25 files for training.\n",
+      "Found 31 files belonging to 4 classes.\n",
+      "Using 6 files for validation.\n",
+      "['char_select', 'connection_lost', 'in_flight', 'in_hanger']\n",
+      "Epoch 1/10\n",
+      "25/25 [==============================] - 2s 49ms/step - loss: 1.3471 - accuracy: 0.6400 - val_loss: 0.1132 - val_accuracy: 1.0000\n",
+      "Epoch 2/10\n",
+      "25/25 [==============================] - 1s 45ms/step - loss: 0.0455 - accuracy: 1.0000 - val_loss: 0.0021 - val_accuracy: 1.0000\n",
+      "Epoch 3/10\n",
+      "25/25 [==============================] - 1s 44ms/step - loss: 0.0015 - accuracy: 1.0000 - val_loss: 1.5000e-05 - val_accuracy: 1.0000\n",
+      "Epoch 4/10\n",
+      "25/25 [==============================] - 1s 38ms/step - loss: 2.2120e-05 - accuracy: 1.0000 - val_loss: 1.1941e-05 - val_accuracy: 1.0000\n",
+      "Epoch 5/10\n",
+      "25/25 [==============================] - 1s 35ms/step - loss: 1.6818e-05 - accuracy: 1.0000 - val_loss: 8.2452e-06 - val_accuracy: 1.0000\n",
+      "Epoch 6/10\n",
+      "25/25 [==============================] - 1s 38ms/step - loss: 9.9276e-06 - accuracy: 1.0000 - val_loss: 6.0598e-06 - val_accuracy: 1.0000\n",
+      "Epoch 7/10\n",
+      "25/25 [==============================] - 1s 32ms/step - loss: 6.5803e-06 - accuracy: 1.0000 - val_loss: 4.3909e-06 - val_accuracy: 1.0000\n",
+      "Epoch 8/10\n",
+      "25/25 [==============================] - 1s 48ms/step - loss: 4.2391e-06 - accuracy: 1.0000 - val_loss: 3.7551e-06 - val_accuracy: 1.0000\n",
+      "Epoch 9/10\n",
+      "25/25 [==============================] - 1s 44ms/step - loss: 3.4284e-06 - accuracy: 1.0000 - val_loss: 3.2981e-06 - val_accuracy: 1.0000\n",
+      "Epoch 10/10\n",
+      "25/25 [==============================] - 1s 35ms/step - loss: 2.7609e-06 - accuracy: 1.0000 - val_loss: 2.4040e-06 - val_accuracy: 1.0000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'image_resize': [206, 384],\n",
+       " 'class_location': 'O:\\\\source\\\\repos\\\\EVE-Online-Bot\\\\training_data\\\\game_state\\\\game_state_classes.json',\n",
+       " 'model_location': 'O:\\\\source\\\\repos\\\\EVE-Online-Bot\\\\training_data\\\\game_state\\\\game_state_model.h5'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_name = 'game_state'\n",
     "training_root = r'O:\\source\\repos\\EVE-Online-Bot\\training_data\\game_state'\n",
